home html change

--- a/sdustore.html
+++ b/sdustore.html
@@ -461,7 +461,7 @@
   </div>
 
   <div class="column_1_footer">
-      <a href="#" style="text-decoration: none; color: #F0F0F0"><div>Home</div></a>
+      <a href="home.html" style="text-decoration: none; color: #F0F0F0"><div>Home</div></a>
       <a href="AboutUs.html" style="text-decoration: none; color: #F0F0F0"><div>About us</div></a>
       <a href="learn_more.html" style="text-decoration: none; color: #F0F0F0;"><div>More</div></a>
       <a href="contacts.html" style="text-decoration: none; color: #F0F0F0;"><div>Contacts</div></a>
