--- a/home.html
+++ b/home.html
@@ -13,13 +13,17 @@
 </head>
 <body>
     <header class="header">
+      <div class="navs">
+      <label class="togglesss" for="toggle">&#9776;</label>
+    </div>
+    <input type="checkbox" name="" id="toggle">
         <div class="container">
             <div class="header_inner">
                 <div class="header_logo">
-                    <!-- <a href="https://sdu.edu.kz/">SDU</a> -->
+                    SDUshop
                 </div>
               <nav class="nav">
-                <a class="nav_link" href="#">ABOUT US</a>
+                <a class="nav_link" href="home.html">HOME</a>
                 <div class="dropdown">
                     <a class="nav_link">SERVICES</a>
                     <div class="dropdown-content">
@@ -28,9 +32,9 @@
                       <a href="belkafood.html">BELKA FOOD</a>
                     </div>
                   </div>
-                <a  class="nav_link" href="#">WORK</a>
+                <a  class="nav_link" href="AboutUs.html">ABOUT US</a>
+                <a  class="nav_link" href="learn_more.html">MORE</a>
                 <a  class="nav_link" href="contacts.html">CONTACTS</a>
-                <a  class="nav_link" href="#">MORE</a>
               </nav>    
             </div>
         </div>
@@ -40,9 +44,51 @@
         <div class="intro_inner">
             <h2 class="intro_sutitle">Welcome </h2>
         <h1 class="intro_title"> IT'S SDU ONLINE ORDER SERVICE</h1>
-        <a class="btn" href="https://sdu.edu.kz/">Learn More</a>
+        <a class="btn" href="learn_more.html">Learn More</a>
     </div>
     </div>
 </div>
+
+
+
+<div class="footer">
+  <div class="logo_footer">
+      <div class="logo_image_footer">
+      <a><img src="https://upload.wikimedia.org/wikipedia/commons/c/cb/Logo_of_Suleymen_Demirel_University%2C_Kazakhstan.png" alt="logo_image" width="100px"></a>
+  </div>
+  <!-- <div class="logo_text_footer">
+      <h1><a>DARME</a></h1>
+      <p><a>Better With Us</a></p>
+  </div> -->
+  </div>
+
+  <div class="column_1_footer">
+      <a href="Home.html" style="text-decoration: none; color: #F0F0F0"><div>Home</div></a>
+      <a href="AboutUs.html" style="text-decoration: none; color: #F0F0F0"><div>About us</div></a>
+      <a href="learn_more.html" style="text-decoration: none; color: #F0F0F0;"><div>More</div></a>
+      <a href="contacts.html" style="text-decoration: none; color: #F0F0F0;"><div>Contacts</div></a>
+  </div>
+
+  <div class="column_2_footer">
+      <div id="darme_footer">SERVICES</div>
+      <a href="sdustore.html" style="text-decoration: none; color: #F0F0F0;"><div>SDU store</div></a>
+      <a href="belkafood.html" style="text-decoration: none; color: #F0F0F0;"><div>Belka Food</div></a>
+      <a href="red_coffee.html" style="text-decoration: none; color: #F0F0F0;"><div>Red Coffee</div></a>
+  </div>
+
+  <div class="column_3_footer">
+      <div class="column_3_div12">address</div>
+      <p>Almaty, Kazakhstan</p>
+      <div class="column_3_div12">phone</div>
+      <p>+7 771 973 49 69</p>
+      <div class="column_3_div12">email</div>
+      <p>tungishbay04.gmail.com</p>
+  </div>
+
+  <div class="copyright_footer">
+      <div>© 2022 SDUshop <a href="#" style="text-decoration: none;">Privacy Policy</a></div>
+  </div>
+</div>
+
 </body>
 </html>
