--- a/AboutUs.html
+++ b/AboutUs.html
@@ -21,7 +21,7 @@
             <div class="header_inner">
                 <div class="header_logo">SDUshop</div>
               <nav class="nav">
-                <a class="nav_link" href="#">HOME</a>
+                <a class="nav_link" href="home.html">HOME</a>
                 <div class="dropdown">
                     <a class="nav_link">SERVICES</a>
                     <div class="dropdown-content">
@@ -30,9 +30,9 @@
                       <a href="belkafood.html">BELKA FOOD</a>
                     </div>
                   </div>
-                <a  class="nav_link" href="#">ABOUT US</a>
-                <a  class="nav_link" href="contacts.html">MORE</a>
-                <a  class="nav_link" href="#">CONTACTS</a>
+                <a  class="nav_link" href="AboutUs.html">ABOUT US</a>
+                <a  class="nav_link" href="learn_more.html">MORE</a>
+                <a  class="nav_link" href="contacts.html">CONTACTS</a>
               </nav>    
             </div>
         </div>
