--- a/learn_more.html
+++ b/learn_more.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <link rel="stylesheet" href="learn_more.css">
+    <title>SDUshop</title>
 </head>
 <body>
     <header class="header">
@@ -13,7 +17,7 @@
             <div class="header_inner">
                 <div class="header_logo">SDUshop</div>
               <nav class="nav">
-                <a class="nav_link" href="#">HOME</a>
+                <a class="nav_link" href="home.html">HOME</a>
                 <div class="dropdown">
                     <a class="nav_link">SERVICES</a>
                     <div class="dropdown-content">
@@ -22,9 +26,9 @@
                       <a href="./belkafood.html">BELKA FOOD</a>
                     </div>
                   </div>
-                <a  class="nav_link" href="#">WORK</a>
-                <a  class="nav_link" href="./contacts.html">CONTACTS</a>
-                <a  class="nav_link" href="#">MORE</a>
+                <a  class="nav_link" href="AboutUs.html">ABOUT US</a>
+                <a  class="nav_link" href="learn_more.html">MORE</a>
+                <a  class="nav_link" href="contacts.html">CONTACTS</a>
                 
               </nav>    
             </div>
