--- a/contacts.html
+++ b/contacts.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <link rel="stylesheet" href="contacts.css"
-    <title></title>
+    <title>SDUshop</title>
 </head>
 <body>
 <header class="header">
@@ -21,9 +21,9 @@
               <nav class="nav">
                 <a class="nav_link" href="AboutUs.html">ABOUT US</a>
                 <a class="nav_link" href="index.html">SERVICE</a>
-                <a  class="nav_link" href="#">WORK</a>
+                <a  class="nav_link" href="./AboutUs.html">WORK</a>
                 <a  class="nav_link" href="contacts.html">CONTACTS</a>
-                <a  class="nav_link" href="#">MORE</a>
+                <a  class="nav_link" href="./learn_more.html">MORE</a>
               </nav>    
             </div>
         </div>
