--- a/red_coffee.html
+++ b/red_coffee.html
@@ -399,9 +399,9 @@
       
           <div class="column_2_footer">
               <div id="darme_footer">SERVICES</div>
-              <a href="About_Us.html" style="text-decoration: none; color: #F0F0F0;"><div>SDU store</div></a>
-              <a href="Contact_Us.html" style="text-decoration: none; color: #F0F0F0;"><div>Belka Food</div></a>
-              <a href="Feedback.html" style="text-decoration: none; color: #F0F0F0;"><div>Red Coffee</div></a>
+              <a href="./sdustore.html" style="text-decoration: none; color: #F0F0F0;"><div>SDU store</div></a>
+              <a href="./belkafood.html" style="text-decoration: none; color: #F0F0F0;"><div>Belka Food</div></a>
+              <a href="./red_coffee.html" style="text-decoration: none; color: #F0F0F0;"><div>Red Coffee</div></a>
           </div>
       
           <div class="column_3_footer">
