--- a/contacts.html
+++ b/contacts.html
@@ -12,6 +12,10 @@
 </head>
 <body>
 <header class="header">
+    <div class="navs">
+      <label class="togglesss" for="toggle">&#9776;</label>
+    </div>
+    <input type="checkbox" name="" id="toggle">
         <div class="container">
             <div class="header_inner">
                 <div class="header_logo">
