--- a/belkafood.html
+++ b/belkafood.html
@@ -308,7 +308,7 @@
                     
                     <div class="product-item">
                         <div class="product-port" data-id="13">
-                        <img class="product-img" src="img/pastaa.jpeg">
+                        <img class="product-img" src="https://fb.ru/media/i/2/3/9/8/8/5/6/i/2398856.jpg">
                         <div class="product-list">
                           <h3 class="item-title">Pasto</h3>
                             <span class="price__currency"> 2500 tg</span>
@@ -365,7 +365,7 @@
           <!-- <div class="logo_text_footer">
               <h1><a>DARME</a></h1>
               <p><a>Better With Us</a></p>
-          </div> --> -->
+          </div> --> 
           </div>
      
           <div class="column_1_footer">
@@ -404,4 +404,3 @@
               <script src="jss3/cart2.js"></script>
 </body>
 </html>
-
