--- a/contacts.html
+++ b/contacts.html
@@ -72,7 +72,7 @@
             </div>
             <div class="form">
                    <div class="forma">
-                   <form action="/action_page.php">
+                   <form action="./home.html">
                     <label for="fname">First name:</label><br>
                     <input type="text" id="fname" name="fname" placeholder="your name" required><br>
                     <label for="lname">Last name:</label><br>
